# bookshop_study

./: .gitignore  TASK.md  fuzz.sh  pyproject.toml
.github/workflows/: python.yml
eshop/: __init__.py  shop.py
tests/: fuzz_shop.py  test_shop.py
