[tool.poetry]
name = "eshopnew"
version = "0.1.0"
description = "Study project - books e-shop"
authors = ["Vadim Karcev <cfg888powerfull@gmail.com>"]
readme = "README.md"
packages = [{include = "eshop"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^4.0.0"
atheris = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
pylint = "^2.15.10"
flake8 = "^6.0.0"
mccabe = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
